--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -15,10 +15,10 @@ services:
           cpu: "0.25"
           memory: "250M"
     environment:
-      - DATABASE_URI: ${DATABASE_URI}
-      - NEXT_AUTH_JS_JWT_SECRET: ${NEXT_AUTH_JS_JWT_SECRET}
-      - NEXT_AUTH_JS_SECRET: ${NEXT_AUTH_JS_SECRET}
-      - PORT: 3003
+      DATABASE_URI: ${DATABASE_URI}
+      NEXT_AUTH_JS_JWT_SECRET: ${NEXT_AUTH_JS_JWT_SECRET}
+      NEXT_AUTH_JS_SECRET: ${NEXT_AUTH_JS_SECRET}
+      PORT: 3003
     networks:
       - countive-docker-dev-network
     ports:
@@ -46,9 +46,9 @@ services:
           cpu: "0.25"
           memory: "500M"
     environment:
-      - POSTGRES_DB: ${DATABASE_NAME}
-      - POSTGRES_PASSWORD: ${DATABASE_PASS}
-      - POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASS}
+      POSTGRES_USER: ${DATABASE_USER}
     image: "postgres:alpine"
     networks:
       - countive-docker-dev-network
