--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -9,10 +9,10 @@ services:
     deploy:
       resources:
         limits:
-          cpu: "1"
+          cpus: "1"
           memory: "500M"
         reservations:
-          cpu: "0.25"
+          cpus: "0.25"
           memory: "250M"
     environment:
       DATABASE_URI: ${DATABASE_URI}
@@ -40,10 +40,10 @@ services:
     deploy:
       resources:
         limits:
-          cpu: "0.5"
+          cpus: "0.5"
           memory: "1G"
         reservations:
-          cpu: "0.25"
+          cpus: "0.25"
           memory: "500M"
     environment:
       POSTGRES_DB: ${DATABASE_NAME}
