--- a/application/package.json
+++ b/application/package.json
@@ -10,17 +10,36 @@
     "test": "jest"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.12.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "jest": "^29.7.0",
+    "prisma": "^5.12.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
