--- a/application/package.json
+++ b/application/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "countive",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "initdb": "ts-node prisma/seed.ts",
     "test": "jest"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@date-io/date-fns": "^3.0.0",
