--- a/prod/docker-compose.yml
+++ b/prod/docker-compose.yml
@@ -4,6 +4,8 @@ services:
       context: ../application
       dockerfile: application.prod.Dockerfile
     container_name: countive-docker-application
+    depends_on:
+      - database
     deploy:
       resources:
         limits:
@@ -18,6 +20,7 @@ services:
       NEXT_AUTH_JS_JWT_SECRET: ${NEXT_AUTH_JS_JWT_SECRET}
       NEXT_AUTH_JS_SECRET: ${NEXT_AUTH_JS_SECRET}
       PORT: 3001
+    entrypoint: ["npx", "prisma", "migrate", "deploy"]
     networks:
       - countive-docker-network
     ports:
